# SphericalGridTreecode

./: .gitignore  LICENSE  README.md
cpp/: CMakeLists.txt  README.md
cpp/Atom/: atom.cpp  atom.h  utility.cpp  utility.h
cpp/Cube/: cube.cpp  cube.h  vecOfCubes.cpp  vecOfCubes.h
cpp/Data/: furthestInHuge.xyz  furthestInWaterBox.xyz  waterSingleAtom.xyz  waterTeenyTiny.xyz  waterTwoAtoms.xyz  waterTwoOxygens.xyz  waterTwoSameOxygens.xyz  waterhuge8X.xyz  waterhuge_50_0_0.xyz  waterhuge_50_50_0.xyz
cpp/ErfPointCharge/: erfPointCharge.cpp  erfPointCharge.h
cpp/Hierarchy/: hierarchy.cpp  hierarchy.h
cpp/IO/: readInputFiles.cpp  readInputFiles.h
cpp/Quadrature/: hermiteRootsWeights.cpp  hermiteRootsWeights.h  sphericalBessel.cpp  sphericalBessel.h
cpp/TestCode/: doubleAtomsInX_Y_or_Z.cpp  run_waterbox.cpp
python/: README.md  basic_numpy_implementation.py
